Landing Page Horizontal Overflow Fix
- Removed horizontal margin in all child elements

--- a/web-app/src/pages/Landing/Landing.css
+++ b/web-app/src/pages/Landing/Landing.css
@@ -3,5 +3,5 @@
 }
 
 .landing > * {
-	margin: 1rem;
+	margin-bottom: 1rem;
 }
